force-app/main/default/objects/Tax_Exemption_Reason__c/Tax_Exemption_Reason__c.object-meta.xml
<CustomObject>
    <description>Object contains all of the Tax Exempt reasons that can be applied to Industrial Accounts.
Object Type: IA
Integrated: N</description>
    <label>Tax Exemption Reason</label>
    <nameField>
        <label>Tax Exemption Reason</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tax Exemption Reasons</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>