force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicator for the Tax Exemption Reason.  If checked (TRUE) the Tax Exemption Reason is active.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicator for the Tax Exemption Reason.  If checked (TRUE) the Tax Exemption Reason is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>