force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Applicable_To__c.field-meta.xml
<CustomField>
    <fullName>Applicable_To__c</fullName>
    <description>The state(s) that this Tax Exempt reason applies to.  Relates to the IA_Physical_Location_State_Province__c on an Account.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>The state(s) that this Tax Exempt reason applies to.</inlineHelpText>
    <label>Applicable To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>