force-app/main/default/objects/Tax_Exemption_Reason__c/fields/City_Exempt__c.field-meta.xml
<CustomField>
    <fullName>City_Exempt__c</fullName>
    <description>Indicates if the Tax Exempt Reason is City Exempt.  Value should be TRUE or FALSE
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates if it City Exempt.  Value should be TRUE or FALSE</inlineHelpText>
    <label>City Exempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>