force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Country_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Country_Exempt__c</fullName>
    <description>Indicates if the Tax Exempt Reason is Country Exempt.  Value should be TRUE or FALSE
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates if the Tax Exempt Reason is Country Exempt.  Value should be TRUE or FALSE</inlineHelpText>
    <label>Country Exempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>