force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description for Tax Exemption</description>
    <inlineHelpText>Description for Tax Exemption</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>