force-app/main/default/objects/Tax_Exemption_Reason__c/fields/District_Exempt__c.field-meta.xml
<CustomField>
    <fullName>District_Exempt__c</fullName>
    <description>Indicates if the Tax Exempt Reason is District Exempt. Value should be TRUE or FALSE
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates if the Tax Exempt Reason is District Exempt. Value should be TRUE or FALSE</inlineHelpText>
    <label>District Exempt</label>
    <length>255</length>
    <type>Text</type>
</CustomField>