force-app/main/default/objects/Tax_Exemption_Reason__c/fields/External_ID__c.field-meta.xml
<CustomField>
    <fullName>External_ID__c</fullName>
    <description>External ID for Tax Exemption Reason.  Used for Integration
Field Type: IA
Integrated: N</description>
    <externalId>true</externalId>
    <inlineHelpText>External ID for Tax Exemption Reason.  Used for Integration</inlineHelpText>
    <label>External ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>