force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Is_County_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Is_County_Exempt__c</fullName>
    <inlineHelpText>Indicates if the Tax Exempt Reason is County Exempt. Value should be Yes or No</inlineHelpText>
    <label>Is County Exempt</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>