force-app/main/default/objects/Tax_Exemption_Reason__c/fields/National_Account_Allowed__c.field-meta.xml
<CustomField>
    <fullName>National_Account_Allowed__c</fullName>
    <description>Indicates if the Tax Exempt Reason can be used by a National Account.  Value should be Y or N (Y=Yes &amp; N=No)
Field Type: IA
Integrated: N</description>
    <inlineHelpText>OBSOLETE
Indicates if the Tax Exempt Reason can be used by a National Account.  Value should be Y or N (Y=Yes &amp; N=No)</inlineHelpText>
    <label>National Account Allowed obsolete</label>
    <length>255</length>
    <type>Text</type>
</CustomField>