force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Other_Information_Description__c.field-meta.xml
<CustomField>
    <fullName>Other_Information_Description__c</fullName>
    <description>If the Tax Exemption Reason Other Information Required = Y; a description should be provided.
Field Type: IA
Integrated: N</description>
    <inlineHelpText>If the Tax Exemption Reason Other Information Required = Y; a description should be provided.</inlineHelpText>
    <label>Other Information Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>