force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Other_Information_Required__c.field-meta.xml
<CustomField>
    <fullName>Other_Information_Required__c</fullName>
    <description>Indicates if the Tax Exempt Reason requires additional information.  Value should be Y or N (Y=Yes &amp; N=No)
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Indicates if the Tax Exempt Reason requires additional information.  Value should be Y or N (Y=Yes &amp; N=No)</inlineHelpText>
    <label>Other Information Required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>