force-app/main/default/objects/Tax_Exemption_Reason__c/fields/State_Code__c.field-meta.xml
<CustomField>
    <fullName>State_Code__c</fullName>
    <description>Defines applicable application based on region. Lookup filter (Optional).
Field Type: IA
Integrated: N</description>
    <inlineHelpText>Defines applicable application based on region. Lookup filter (Optional).</inlineHelpText>
    <label>State Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>