force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Tax_Exemption_Country__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Country__c</fullName>
    <description>Country where Tax Exemption is issued</description>
    <inlineHelpText>Country where Tax Exemption is issued</inlineHelpText>
    <label>Tax Exemption Country</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>US</fullName>
                <default>true</default>
                <label>United States</label>
            </value>
            <value>
                <fullName>CA</fullName>
                <label>Canada</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>