force-app/main/default/objects/Tax_Exemption_Reason__c/fields/Tax_Exemption_Type__c.field-meta.xml
<CustomField>
    <fullName>Tax_Exemption_Type__c</fullName>
    <description>Indicates the type of tax exemption</description>
    <inlineHelpText>Indicates the type of tax exemption</inlineHelpText>
    <label>Tax Exemption Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Industrial Account</fullName>
            </value>
            <value>
                <fullName>Consumer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>